# zkbob-generator

./: .gitignore  Cargo.toml  README.md  test_inputs.json
app/: proof.json  test_generateProof.json  test_proof.json
bindings/src/: attestation_verifier.rs  dispute.rs  entity_key_registry.rs  error.rs  generator_registry.rs  helper.rs  i_attestation_verifier.rs  i_verifier.rs  lib.rs  mock_attestation_verifier.rs  mock_token.rs  mock_verifier.rs  plonk_verifier_wrapper.rs  proof_market_place.rs  proof_marketplace.rs  transfer_verifier_wrapper.rs  xor_2_verifier_wrapper.rs
src/: handler.rs  lib.rs  main.rs  model.rs  verification.rs  zkbob_generator.rs
tests/: ivs_tests.rs
tools/: ivs.rs  secret_inputs_helpers.rs
