[package]
name = "zkbob_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0"
bindings = { path = "./bindings", package = "foundry-contracts" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
actix-web = "4.3.0"
dotenv = "0.15.0"
validator = { version = "0.16", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
env_logger = "0.10"
log = "0.4"
hex = "0.4"
secp256k1 = "0.28.0"
libzeropool-zkbob="1.3.0"
ethers ={version = "2.0.10", features = ["abigen", "ws", "rustls"] }
reqwest = { version = "0.11", features = ["json"] }
ecies = {version = "0.2.6", features = ["std"]}
aes-gcm = "0.10.3"


[[bin]]
name = "ivs"
path = "tools/ivs.rs"